# sparsenet

./: .gitignore  README.md  pyproject.toml
benchmarks/: happy_lambda.py
data/simulations/Alan/: bias_0.csv  bias_1.csv  dataset.csv  target.csv  weight_0.csv  weight_1.csv
data/simulations/Mark/: bias_0.csv  bias_1.csv  target.csv  weight_0.csv  weight_1.csv
data/simulations/Steve/: target.csv  weights.csv
data/unige/: X.csv  alphahat.csv  happylambda.csv
docs/: conf.py  index.rst
docs/developer_guide/: build_doc.rst  file_structure.rst  happy_lambda.rst  index.rst  python_package.rst
docs/installation/: index.rst
docs/sparsenet/: index.rst
docs/sparsenet/happy_lambda/: happy_lambda_algorithm.rst  happy_lambda_linear.rst  happy_lambda_mlp.rst  index.rst
docs/sparsenet/linear/: gd.rst  index.rst  ista.rst  lasso_linear_trainer.rst  simulation.rst
docs/sparsenet/nn/: index.rst  ista.rst  lasso_mlp_trainer.rst  normalized_linear.rst  penalized_l2_loss.rst  sigma.rst  simulation.rst
docs/user_guide/: create_model.rst  evaluate_model.rst  happy_lambda.rst  index.rst  optimize_model.rst  simulation.rst  tensors.rst  use_model.rst
examples/linear/: happy_lambda.py  lasso_trainer.py  simulation.py  training.py
examples/nn/: lasso_trainer.py  sigma.py  simulation.py  training.py
src/sparsenet/: __init__.py
src/sparsenet/linear/: __init__.py  (+4 more)
tests/happy_lambda/: test_happy_lambda_algorithm.py  test_happy_lambda_attributes.py  test_happy_lambda_mlp.py
tests/nn/: test_normalized_linear.py  test_penalized_l2_loss.py  test_sigma.py  test_simulation.py
(+13 files in other folders)
